# opentelemetry-plugin

./: CHANGELOG.md  LICENSE  README.md  flake.nix  opentelemetry-plugin.cabal
ghc96/OpenTelemetry/: Plugin.hs
src/OpenTelemetry/: Plugin.hs
src/OpenTelemetry/Plugin/: Shared.hs
test/: Main.hs
