cabal-version:      3.0
name:               opentelemetry-plugin
version:            1.0.0
synopsis:           GHC plugin for open telemetry
description:        This package provides a GHC plugin that exports each module's build times to an open telemetry collector.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mercury Technologies
maintainer:         gabriella@mercury.com
copyright:          2023 Mercury Technologies
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  OpenTelemetry.Plugin
    build-depends:    base >=4.15.0.0 && < 5
                    , bytestring
                    , containers
                    , ghc
                    , hs-opentelemetry-api >= 0.1.0.0
                    , hs-opentelemetry-propagator-w3c
                    , hs-opentelemetry-sdk
                    , mwc-random
                    , text
                    , unordered-containers
    other-modules:    OpenTelemetry.Plugin.Shared
                    , Paths_opentelemetry_plugin
    autogen-modules:  Paths_opentelemetry_plugin
    default-language: Haskell2010
    ghc-options:      -Wall

    if impl(ghc < 9.2)
        buildable: False
