cabal-version:      3.0
name:               opentelemetry-plugin
version:            1.1.0
synopsis:           GHC plugin for open telemetry
description:        This package provides a GHC plugin that exports each module's build times to an open telemetry collector.  See the included `README` below for more details.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mercury Technologies
maintainer:         gabriella@mercury.com
copyright:          2023 Mercury Technologies
build-type:         Simple
extra-doc-files:    CHANGELOG.md README.md

library
    hs-source-dirs:   src
    exposed-modules:  OpenTelemetry.Plugin
    build-depends:    base >=4.18.0.0 && < 5
                    , bytestring
                    , containers
                    , ghc >= 9.2 && < 9.8
                    , hs-opentelemetry-api >= 0.1.0.0 && < 0.2
                    , hs-opentelemetry-propagator-w3c
                    , hs-opentelemetry-sdk >= 0.0.3.0 && < 0.1
                    , mwc-random >= 0.13.1.0
                    , stm
                    , stm-containers
                    , text
                    , transformers
                    , unordered-containers
    other-modules:    OpenTelemetry.Plugin.Shared
                    , Paths_opentelemetry_plugin
    autogen-modules:  Paths_opentelemetry_plugin
    default-language: Haskell2010
    ghc-options:      -Wall
